--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     <label for="productName">Product Name</label>
                     <input type="text" name="" id="productName" class=" form-control">
                     <div id="alertName" class="mt-1 py-2 alert alert-danger d-none"> The product name must be english
-                        characters only</div>
+                        characters only and minimum from 3 characters to 100 characters</div>
                 </div>
 
                 <div class=" mb-4">
                     <label for="productPrice">Product Price</label>
                     <input type="number" name="" id="productPrice" class=" form-control">
-                    <div id="alertPrice" class="mt-1 py-2 alert alert-danger d-none"> The number must be minium 10 and
-                        max 99999</div>
+                    <div id="alertPrice" class="mt-1 py-2 alert alert-danger d-none">The product price must be from 1
+                        to 9999 EGP</div>
 
                 </div>
 
