--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class=" mb-4">
                     <label for="productName">Product Name</label>
                     <input type="text" name="" id="productName" class=" form-control">
-                    <div id="alertName" class="mt-1 py-2 alert alert-danger d-none"> The product name must be english
+                    <div id="alertName" class="mt-1 py-2 alert alert-danger d-none">The product name must be in english
                         characters only and minimum from 3 characters to 100 characters</div>
                 </div>
 
@@ -32,7 +32,7 @@
                     <label for="productPrice">Product Price</label>
                     <input type="number" name="" id="productPrice" class=" form-control">
                     <div id="alertPrice" class="mt-1 py-2 alert alert-danger d-none">The product price must be from 1
-                        to 9999 EGP</div>
+                        to 10000 EGP</div>
 
                 </div>
 
@@ -52,8 +52,9 @@
                     <label for="productDescription">Product Description</label>
                     <textarea class=" form-control" id="productDescription"></textarea>
 
-                    <div id="alertDesc" class="mt-1 py-2 alert alert-danger d-none"> The number must be minium 10
-                        characters and max 100</div>
+                    <div id="alertDesc" class="mt-1 py-2 alert alert-danger d-none">The product description must be
+                        in english
+                        characters only and minimum from 3 characters to 100 characters</div>
                 </div>
 
                 <button id="btnadd" type="button" class="btn btn-outline-info my-4 me-3" onclick="addProduct()">Add
