--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                         <th>Product Description</th>
                         <th>Update</th>
                         <th>Delete</th>
+                        <th>Added At</th>
                     </tr>
                 </thead>
 
