--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
                 <div class=" mb-4">
                     <label for="productName">Product Name</label>
                     <input type="text" name="" id="productName" class=" form-control">
+
                     <div id="alertName" class="mt-1 py-2 alert alert-danger d-none">The product name must be in english
                         characters only and minimum from 3 characters to 100 characters</div>
+
+                    <div id="alertAlreadyAdded" class=" alert alert-danger mt-1 py-2 d-none">This product name is
+                        already added</div>
+
                 </div>
 
                 <div class=" mb-4">
